--- a/css/style.css
+++ b/css/style.css
@@ -540,22 +540,42 @@ input, button, textarea, select {
 }
 
 .about-us {
+  max-width: 1568px;
   font-family: "Uindbase Font 1";
   font-style: normal;
   font-weight: 400;
   text-transform: uppercase;
   color: #FFFFFF;
 }
+.about-us__logo {
+  display: none;
+}
+.about-us__title-bg {
+  text-align: right;
+  font-size: 160px;
+  line-height: 160px;
+}
 .about-us__title {
-  text-align: center;
-  font-size: 70px;
-  line-height: 100px;
+  font-size: 100px;
+  right: 0;
 }
 .about-us__text {
   max-width: 1450px;
-  padding: 15px 15px 15px 15px;
+  padding: 80px 15px 70px 15px;
   font-size: 20px;
   line-height: 20px;
+}
+.about-us__image-box {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  max-width: 1450px;
+  height: 320px;
+  overflow: hidden;
+  margin-bottom: 100px;
+}
+.about-us__image-box img {
+  max-width: 100%;
 }
 
 .footer {
@@ -667,6 +687,15 @@ input, button, textarea, select {
   main .contact__links {
     font-size: 20px;
     line-height: 20px;
+  }
+  .about-us {
+    max-width: 1254px;
+  }
+  .about-us-title-wrapper {
+    margin-top: 100px;
+  }
+  .about-us__image-box {
+    margin-bottom: 85px;
   }
 }
 @media (max-width: 1024px) {
@@ -811,6 +840,28 @@ input, button, textarea, select {
   }
   main .contact__social {
     display: none;
+  }
+  .about-us-title-wrapper {
+    height: 80px;
+    margin-top: 40px;
+  }
+  .about-us__title-bg {
+    padding-left: 15px;
+    text-align: left;
+    font-size: 80px;
+    line-height: 70px;
+  }
+  .about-us__title {
+    padding-left: 15px;
+    font-size: 60px;
+    line-height: 60px;
+    left: 0;
+  }
+  .about-us__text {
+    padding: 40px 15px 35px 15px;
+  }
+  .about-us__image-box {
+    margin-bottom: 50px;
   }
   .footer {
     font-size: 10px;
@@ -999,5 +1050,28 @@ input, button, textarea, select {
   }
   main .contact-content-wrapper {
     padding: 20px 0px;
+  }
+  .about-us__logo {
+    display: block;
+    padding: 50px 0px;
+  }
+  .about-us-title-wrapper {
+    margin: 0;
+  }
+  .about-us__title-bg {
+    padding-left: 15px;
+    text-align: left;
+    font-size: 60px;
+    line-height: 70px;
+  }
+  .about-us__title {
+    padding-left: 15px;
+    font-size: 40px;
+    line-height: 60px;
+    left: 0;
+  }
+  .about-us__image-box {
+    padding: 0px 15px;
+    justify-content: flex-start;
   }
 }/*# sourceMappingURL=style.css.map */
