--- a/css/style.scss
+++ b/css/style.scss
@@ -561,22 +561,42 @@ $white: #FFFFFF;
 
 //ABOUT-US.html
 .about-us {
+    max-width: $limit-size1920;
     font-family: 'Uindbase Font 1';
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
 
     color: #FFFFFF;
+    &__logo {
+        display: none;
+    }
+    &__title-bg {
+        text-align: right;
+        font-size: 160px;
+        line-height: 160px;
+    }
     &__title {
-        text-align: center;
-        font-size: 70px;
-        line-height: 100px;
+        font-size: 100px;
+        right: 0;
     }
     &__text {
         max-width: 1450px;
-        padding: 15px 15px 15px 15px;
+        padding: 80px 15px 70px 15px;
         font-size: 20px;
         line-height: 20px;
+    }
+    &__image-box {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        max-width: 1450px;
+        height: 320px;
+        overflow: hidden;
+        margin-bottom: 100px;
+    }
+    &__image-box img {
+        max-width: 100%;
     }
     
 }
@@ -701,6 +721,16 @@ $white: #FFFFFF;
                 font-size: 20px;
                 line-height: 20px;
             }
+        }
+    }
+
+    .about-us {
+        max-width: $limit-size1600;
+        &-title-wrapper {
+            margin-top: 100px;
+        }
+        &__image-box {
+            margin-bottom: 85px;
         }
     }
 }
@@ -861,6 +891,31 @@ $white: #FFFFFF;
             &__social {
                 display: none;
             }
+        }
+    }
+
+    .about-us {
+        &-title-wrapper {
+            height: 80px;
+            margin-top: 40px;
+        }
+        &__title-bg {
+            padding-left: 15px;
+            text-align: left;
+            font-size: 80px;
+            line-height: 70px;
+        }
+        &__title {
+            padding-left: 15px;
+            font-size: 60px;
+            line-height: 60px;
+            left: 0;
+        }
+        &__text {
+            padding: 40px 15px 35px 15px;
+        }
+        &__image-box {
+            margin-bottom: 50px;
         }
     }
 
@@ -1071,6 +1126,32 @@ $white: #FFFFFF;
             &-content-wrapper {
                 padding: 20px 0px;
             }
+        }
+    }
+
+    .about-us {
+        &__logo {
+            display: block;
+            padding: 50px 0px;
+        }
+        &-title-wrapper {
+            margin: 0;
+        }
+        &__title-bg {
+            padding-left: 15px;
+            text-align: left;
+            font-size: 60px;
+            line-height: 70px;
+        }
+        &__title {
+            padding-left: 15px;
+            font-size: 40px;
+            line-height: 60px;
+            left: 0;
+        }
+        &__image-box {
+            padding: 0px 15px;
+            justify-content: flex-start;
         }
     }
 }
