--- a/css/style.scss
+++ b/css/style.scss
@@ -108,13 +108,13 @@ $white: #FFFFFF;
     justify-content: center;
     align-items: center;
     height: auto;
-    min-height: 100vh;
+    min-height: 100%;
     width: 100%;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
 
     z-index: 99;
-    overflow: auto;
+    overflow: hidden;
 }
 // MODALS
 .burger-menu {
@@ -177,7 +177,7 @@ $white: #FFFFFF;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 
-    overflow: auto;
+    overflow-y: auto;
     &__close {
         cursor: pointer;
         position: absolute;
@@ -851,22 +851,35 @@ $white: #FFFFFF;
     }
 
     .product-card {
+        flex-direction: column-reverse;
         gap: 40px;
         width: 100%;
+        max-height: 3800px;
         border-radius: 0;
         -webkit-border-radius: 0;
         -moz-border-radius: 0;
         -ms-border-radius: 0;
         -o-border-radius: 0;
 
-        &__image img{
-            width: 300px;
-            max-height: 100vh;
+        &__info {
+            padding-top: 50px;
+            align-items: center;
+        }
+
+        &__image {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 40px;
+        }
+        &__image img {
+            max-width: 80%;
+            max-height: 400px;
         }
         &__price {
             font-size: 30px;
         }
         &__description {
+            text-align: center;
             font-size: 15px;
             padding: 20px 0px;
         }
@@ -1093,17 +1106,6 @@ $white: #FFFFFF;
         width: 100%;
         min-height: 100vh;
         
-
-        // &__info {
-        //     background: linear-gradient( rgba(255, 255, 255, 0.8),rgba(0, 0, 0, 0.5) ), url('../img/actual-photo3.jpg');
-        //     background-position: center;
-        //     background-repeat: no-repeat;
-        //     background-size: cover;
-        //     padding-left: 15px;
-        // }
-        &__image {
-            display: none;
-        }
         &__price {
             font-size: 30px;
         }
