--- a/css/style.css
+++ b/css/style.css
@@ -140,13 +140,12 @@ input, button, textarea, select {
   display: none;
   justify-content: center;
   align-items: center;
-  height: auto;
   min-height: 100%;
   width: 100%;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 99;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .burger-menu {
@@ -194,6 +193,7 @@ input, button, textarea, select {
   display: flex;
   justify-content: center;
   gap: 60px;
+  position: static;
   max-width: 1200px;
   font-family: "Uindbase Font 1";
   font-style: normal;
@@ -810,26 +810,31 @@ input, button, textarea, select {
   .product-card {
     flex-direction: column-reverse;
     gap: 40px;
-    width: 100%;
-    max-height: 3800px;
+    position: static;
+    width: 100vw;
+    height: 100vh;
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -ms-border-radius: 0;
     -o-border-radius: 0;
+    overflow-y: scroll;
   }
   .product-card__info {
     padding-top: 50px;
     align-items: center;
   }
   .product-card__image {
-    display: flex;
-    justify-content: center;
+    display: block;
+    height: 600px;
+    width: 100%;
     padding-bottom: 40px;
   }
   .product-card__image img {
-    max-width: 80%;
-    max-height: 400px;
+    margin: 0 auto;
+    width: 80%;
+    height: 100%;
+    max-height: none;
   }
   .product-card__price {
     font-size: 30px;
@@ -1032,11 +1037,6 @@ input, button, textarea, select {
   }
 }
 @media (max-width: 768px) {
-  .product-card {
-    gap: 40px;
-    width: 100%;
-    min-height: 100vh;
-  }
   .product-card__price {
     font-size: 30px;
   }
