--- a/css/style.scss
+++ b/css/style.scss
@@ -107,14 +107,13 @@ $white: #FFFFFF;
     display: none;
     justify-content: center;
     align-items: center;
-    height: auto;
     min-height: 100%;
     width: 100%;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
 
     z-index: 99;
-    overflow: hidden;
+    overflow: visible;
 }
 // MODALS
 .burger-menu {
@@ -165,6 +164,7 @@ $white: #FFFFFF;
     display: flex;
     justify-content: center;
     gap: 60px;
+    position: static;
     max-width: 1200px;
     font-family: 'Uindbase Font 1';
     font-style: normal;
@@ -853,27 +853,32 @@ $white: #FFFFFF;
     .product-card {
         flex-direction: column-reverse;
         gap: 40px;
-        width: 100%;
-        max-height: 3800px;
+        position: static;
+        width: 100vw;
+        height: 100vh;
         border-radius: 0;
         -webkit-border-radius: 0;
         -moz-border-radius: 0;
         -ms-border-radius: 0;
         -o-border-radius: 0;
-
+        overflow-y: scroll;
         &__info {
             padding-top: 50px;
             align-items: center;
         }
-
         &__image {
-            display: flex;
-            justify-content: center;
+            display: block;
+            height: 600px;
+            width: 100%;
             padding-bottom: 40px;
         }
         &__image img {
-            max-width: 80%;
-            max-height: 400px;
+            margin: 0 auto;
+            width: 80%;
+            height: 100%;
+            max-height: none;
+
+            // object-fit: scale-down;
         }
         &__price {
             font-size: 30px;
@@ -1102,10 +1107,6 @@ $white: #FFFFFF;
 
 @media (max-width: 768px) {
     .product-card {
-        gap: 40px;
-        width: 100%;
-        min-height: 100vh;
-        
         &__price {
             font-size: 30px;
         }
